# Public headers directory

include_dirs = [ include_directories('../..') ]

config_pub_h = configure_file(
  configuration : configdata_pub,
  output : 'config.hh',
)

headers = [ config_pub_h ] + files(
  'attr-path.hh',
  'attr-set.hh',
  'counter.hh',
  'diagnose.hh',
  'eval-trace/counters.hh',
  'eval-trace/hash-spec.hh',
  'eval-trace/ids.hh',
  'eval-trace/canonical-hash.hh',
  'eval-trace/deps/types.hh',
  'eval-trace/deps/hash.hh',
  'eval-trace/deps/interning-pools.hh',
  'eval-trace/deps/dep-hash-fns.hh',
  'eval-trace/deps/dep-capture-scope.hh',
  'eval-trace/deps/memo-replay-store.hh',
  'eval-trace/deps/replay-publish-scope.hh',
  'eval-trace/deps/sibling-force-scope.hh',
  'eval-trace/deps/semantic-analyzer.hh',
  'eval-trace/deps/trace-activation-scope.hh',
  'eval-trace/deps/input-resolution.hh',
  'eval-trace/deps/input-resolution-internal.hh',
  'eval-trace/deps/nix-binding.hh',
  'eval-trace/deps/trace-access.hh',
  'eval-trace/deps/recording.hh',
  'eval-trace/deps/trace-frame.hh',
  'eval-trace/deps/shape-recording.hh',
  'eval-environment.hh',
  'eval-environment/fwd.hh',
  'eval-environment/domains.hh',
  'eval-environment/capabilities.hh',
  'eval-environment/authority-internal.hh',
  'eval-environment/session-types.hh',
  'eval-environment/request-types.hh',
  'eval-environment/observation-types.hh',
  'eval-environment/environment.hh',
  'eval-trace/child-meta.hh',
  'eval-trace/context.hh',
  'eval-trace/cache/root-handle.hh',
  'eval-trace/cache/derived-container-builder.hh',
  'eval-trace/cache/trace-session.hh',
  'eval-trace/cache/trace-backend.hh',
  'eval-trace/store/attr-vocab-store.hh',
  'eval-trace/store/semantic-registry.hh',
  'eval-trace/store/session-identity.hh',
  'eval-trace/store/session-policy.hh',
  'eval-trace/store/sqlite-trace-storage.hh',
  'eval-trace/store/in-memory-trace-rows.hh',
  'eval-trace/store/recorder.hh',
  'eval-trace/store/trace-resolve.hh',
  'eval-trace/store/trace-result-codec.hh',
  'eval-trace/store/trace-storage.hh',
  'eval-trace/store/trace-value-types.hh',
  'eval-trace/store/verification-protocol.hh',
  'eval-trace/store/verification-session.hh',
  'eval-trace/store/vocab-aware-hasher.hh',
  'eval-trace/deps/analysis.hh',
  'eval-trace/deps/authority.hh',
  'eval-trace/eval-trace-hash.hh',
  'eval-trace/deps/dep-recording-context.hh',
  'eval-trace/eval-context.hh',
  'eval-trace/strand-local.hh',
  'eval-trace/result.hh',
  'eval-trace/semantic-objects.hh',
  'eval-trace/data/traced-data.hh',
  'eval-error.hh',
  'eval-gc.hh',
  'eval-inline.hh',
  'eval-profiler-settings.hh',
  'eval-profiler.hh',
  'eval-settings.hh',
  'eval.hh',
  'fetch-tree.hh',
  'function-trace.hh',
  'gc-small-vector.hh',
  'get-drvs.hh',
  'json-to-value.hh',
  'nixexpr.hh',
  'parser-state.hh',
  'primops.hh',
  'print-ambiguous.hh',
  'print-options.hh',
  'print.hh',
  'repl-exit-status.hh',
  'search-path.hh',
  'static-string-data.hh',
  'symbol-table.hh',
  'value-to-json.hh',
  'value-to-xml.hh',
  'value.hh',
  'value/context.hh',
)
