# Public headers directory

include_dirs = [ include_directories('../..') ]

config_pub_h = configure_file(
  configuration : configdata_pub,
  output : 'config.hh',
)

headers = [ config_pub_h ] + files(
  'abstract-setting-to-json.hh',
  'alignment.hh',
  'ansicolor.hh',
  'archive.hh',
  'args.hh',
  'args/root.hh',
  'array-from-string-literal.hh',
  'async.hh',
  'base-n.hh',
  'base-nix-32.hh',
  'bump-memory-resource.hh',
  'callback.hh',
  'canon-path.hh',
  'checked-arithmetic.hh',
  'chunked-vector.hh',
  'closure.hh',
  'comparator.hh',
  'compression-algo.hh',
  'compression-settings.hh',
  'conditional-base.hh',
  'compression.hh',
  'compute-levels.hh',
  'config-global.hh',
  'config-impl.hh',
  'configuration.hh',
  'current-process.hh',
  'deleter.hh',
  'demangle.hh',
  'english.hh',
  'environment-variables.hh',
  'error.hh',
  'exec.hh',
  'executable-path.hh',
  'exit.hh',
  'experimental-features.hh',
  'file-content-address.hh',
  'file-descriptor.hh',
  'file-path-impl.hh',
  'file-path.hh',
  'file-system-at.hh',
  'file-system.hh',
  'finally.hh',
  'fmt.hh',
  'fs-sink.hh',
  'fun.hh',
  'gdp/proof-guarded.hh',
  'gdp/proof.hh',
  'git.hh',
  'guarded.hh',
  'hash.hh',
  'hilite.hh',
  'json-impls.hh',
  'json-non-null.hh',
  'json-utils.hh',
  'logging.hh',
  'lru-cache.hh',
  'memo.hh',
  'memory-source-accessor.hh',
  'mounted-source-accessor.hh',
  'muxable-pipe.hh',
  'nar-accessor.hh',
  'nar-cache.hh',
  'nar-listing.hh',
  'os-string.hh',
  'pointer-bloom-filter.hh',
  'pool.hh',
  'pos-idx.hh',
  'pos-table.hh',
  'position.hh',
  'posix-source-accessor.hh',
  'processes.hh',
  'ref.hh',
  'regex-combinators.hh',
  'repair-flag.hh',
  'serialise.hh',
  'session-types/actionable.hh',
  'session-types/backend.hh',
  'session-types/branches.hh',
  'session-types/chan.hh',
  'session-types/dual.hh',
  'session-types/in-process.hh',
  'session-types/lift.hh',
  'session-types/protocol.hh',
  'session-types/scoped.hh',
  'session-types/select.hh',
  'session-types/session.hh',
  'session-types/subst.hh',
  'session-types/then.hh',
  'signals.hh',
  'signature/local-keys.hh',
  'signature/signer.hh',
  'singleton/dispatch.hh',
  'socket.hh',
  'sort.hh',
  'source-accessor.hh',
  'source-path.hh',
  'split.hh',
  'std-hash.hh',
  'string-intern-table.hh',
  'strings-inline.hh',
  'strings.hh',
  'suggestions.hh',
  'sync.hh',
  'table.hh',
  'tarfile.hh',
  'terminal.hh',
  'thread-pool.hh',
  'topo-sort.hh',
  'tagged.hh',
  'types.hh',
  'linear.hh',
  'move-only.hh',
  'unix-domain-socket.hh',
  'url-parts.hh',
  'url.hh',
  'users.hh',
  'util.hh',
  'variant-wrapper.hh',
  'xml-writer.hh',
)
